Fixes #116 revamp z-indexes

--- a/src/components/Table/Table.less
+++ b/src/components/Table/Table.less
@@ -101,7 +101,7 @@
 					width: 4px;
 					background-color: fade(@color-black, 70%);
 					opacity: 0;
-					transition: opacity 100ms;
+					transition: opacity @timing-animation-hover;
 					&:hover {
 						opacity: 1;
 					}
